Mantis ChangeLog

2006.xx.xx  -  1.1
- Added Config: $g_set_configuration_threshold - the user access level threshold required to be able to set configuration option via Mantis interface.
- Added Config: $g_inline_file_exts - file extensions displayed inline

2005.09.11  -  1.0.0rc2

- 0006097: [security] user ID is cached indefinately (thraxisp)
- 0006189: [security] List of users (in filter) visible for unauthorized users. (thraxisp)
- 0004368: [administration] Login page doesn't redirect to followed link, if the first login attempt fails (ryandesign)
- 0005861: [administration] APPLICATION ERROR #700 on manage_proj_edit_page.php?project_id=xx (thraxisp)
- 0005932: [administration] Manage eMail notification access rigths (thraxisp)
- 0006015: [administration] setting 'who can change notifications' fails (thraxisp)
- 0006053: [administration] How to delete all the "Project Specific Settings" from the "Workflow Thresholds" page ?? (thraxisp)
- 0006084: [administration] default language for account registration (thraxisp)
- 0006098: [administration] bug_report*.php uses "handle_bug_threshold" to display the Assign To combo box? (instead of "update_bug_assign_threshold") (thraxisp)
- 0006100: [administration] Creating a new project shows "Create New Subproject" page (thraxisp)
- 0006213: [administration] Saving "Status to set auto-assigned issues to" don´t work (thraxisp)
- 0004127: [bugtracker] Unnecessary dash in title when window title is empty string (jlatour)
- 0005261: [bugtracker] Reproducing newlines and br tags when cloning (ryandesign)
- 0005336: [bugtracker] Summary does not combine categories (thraxisp)
- 0005559: [bugtracker] Wrong dateformat displayed in issue history (thraxisp)
- 0005969: [bugtracker] Incorrect recipients for notifications (thraxisp)
- 0006003: [bugtracker] Sponsoring need to be verified (thraxisp)
- 0006012: [bugtracker] Mantis redirects to install.php if MANTIS_CONFIG env var is used (vboctor)